[tool.poetry]
name = "ANDES"
version = "1.0.0"
description = ""
authors = ["ylaboratory"]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.8"

[tool.poetry.scripts]
andes = 'andes:main'
andes-gsea = 'andes.gsea:main'

[tool.poetry.dependencies]
joblib = "*"
numpy = "*"
pandas = "*"
python-dateutil = "*"
pytz = "*"
scikit-learn = "*"
scipy = "*"
six = "*"
threadpoolctl = "*"
tzdata = "*"
statsmodels = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
